# semantra

./: .gitignore  LICENSE  MANIFEST.in  README.md  models.py  package.json  pdf.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  semantra.py  setup.py  util.py  vite.config.js
.github/workflows/: release.yml
client/: README.md  package-lock.json  package.json  rollup.config.js  svelte.config.js  tailwind.config.js
client/public/: index.html
client/src/: App.svelte  App_0.svelte  explainQueue.ts  layoutEngine.test.ts  layoutEngine.ts  types.ts
client/src/components/: PdfChars.svelte  PdfPage.svelte  PdfPageImage.svelte  PdfView.svelte  SearchBar.svelte  SearchResult.svelte  SearchResultText.svelte  SearchResults.svelte  TabBar.svelte  TextView.svelte
docs/: README_es.md  README_zh-CN.md  concept_embeddings.md  concept_windows.md  concepts.md  guide_models.md  guide_openai.md  guides.md  help.md  lesson_1_semantically_searching_shakespeare.md  lesson_2_advanced_searching.md  publish_pypi.md  tutorial.md  usage.md
leaf-ir-candle/: .gitignore  Cargo.toml
leaf-ir-candle/examples/: bench.rs
leaf-ir-candle/src/: lib.rs  main.rs  verify.rs
src/: app.css  app.html  canvas-datagrid.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  fetch-model.sh  quantize-model.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  chunk.rs  embed.rs  explain.rs  extract.rs  lib.rs  main.rs  pdf.rs  query.rs  store.rs
src-tauri/tests/: embedding.rs  index_bench.rs  pdf_highlight.rs  vector_store.rs
src/lib/: SemantraLogo.svelte  state.svelte.ts
src/lib/embedding/: FileEmbedder.svelte  HighlightedResult.svelte  chunk.ts  embed.ts  highlight.ts  search.ts
src/lib/project/: CsvViewer.svelte  FileDropZone.svelte  IndexProgressBar.svelte  ManagePanel.svelte  PdfViewer.svelte  ProjectSidebar.svelte  SearchBar.svelte  SearchResult.svelte  SearchResultText.svelte  SearchResults.svelte  TabBar.svelte  TextView.svelte  projectClient.ts  projectsStore.svelte.ts  query.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/(manage)/: +layout.svelte  +page.svelte
src/routes/(manage)/project/: +page.svelte
src/routes/search/: +page.svelte
src/semantra/: client_public  models.py  pdf.py  semantra.py  util.py
