[package]
name = "leaf-ir-candle-test"
version = "0.1.0"
edition = "2021"

# Shared pipeline lives in src/lib.rs; both binaries use it.
[lib]
name = "leaf_ir_candle_test"
path = "src/lib.rs"

# Main demo binary
[[bin]]
name = "leaf-ir-candle-test"
path = "src/main.rs"

# Reference-free verification binary: cargo run --release --bin verify
[[bin]]
name = "verify"
path = "src/verify.rs"

[dependencies]
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
tokenizers = "0.20"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Files are loaded from ./models (downloaded out-of-band via the notebook).
# No hf-hub / ureq: the test has zero network dependency.

# Apple platforms (macOS + iOS) ship the Accelerate framework — route candle's
# f32 BLAS/GEMM through it for a meaningful CPU speedup. We also compile in the
# `metal` GPU backend here; whether it's actually used is decided at RUNTIME by
# `select_device` (see src/lib.rs), which tries the Apple GPU and falls back to
# CPU. Both features coexist: accelerate powers the CPU path, metal the GPU path.
# Gated by target so non-Apple builds (Linux/Windows) never try to link these.
#
# NOTE: Metal is not always faster — GPU dispatch overhead can dominate for small
# batches. The env var LEAF_IR_DEVICE=cpu|metal forces a device for A/B timing.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
candle-core = { version = "0.10", features = ["accelerate", "metal"] }
candle-nn = { version = "0.10", features = ["accelerate", "metal"] }
candle-transformers = { version = "0.10", features = ["accelerate", "metal"] }

# Windows x86_64: route candle's f32 BLAS/GEMM through Intel MKL — the Windows
# counterpart to `accelerate` above. Without this, candle falls back to its
# pure-Rust `gemm` kernels, which left Windows *several times* slower than Mac on
# the BERT transformer layers (the bulk of embedding cost). `intel-mkl-src`
# downloads and statically links MKL at build time (+~30-40MB binary, heavier
# build); it runs on AMD as well as Intel.
#
# Scoped to WINDOWS only (not all non-Apple x86_64): the MKL that `intel-mkl-src`
# ships for Linux is 2020.1, which lacks the half-precision `hgemm_` symbol
# candle's mkl module references, so a Linux+MKL build fails at link
# ("undefined symbol: hgemm_"). The Windows image is MKL 2022.0, which has it.
# Linux was never the perf concern, so it stays on the working `gemm` fallback
# rather than us fighting the older Linux MKL. Also scoped to x86_64 so
# Windows-on-ARM (no MKL) builds on `gemm` too.
#
# There is NO GPU backend here on purpose: CUDA would help only NVIDIA users at a
# large build/distribution cost, so the CPU path stays the single shipped target.
[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
candle-core = { version = "0.10", features = ["mkl"] }
candle-nn = { version = "0.10", features = ["mkl"] }
candle-transformers = { version = "0.10", features = ["mkl"] }