[package]
name = "semantra"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "semantra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# mdbr-leaf-ir embedding pipeline (BERT -> mean-pool -> Dense 384->768 -> L2).
# Path dependency so this rarely-changing, candle-heavy crate compiles once and
# is cached separately from the frequently-rebuilt app code.
leaf-ir-candle-test = { path = "../../mdbr-leaf-ir-candle" }

# Optimize ALL dependencies (candle, gemm, tokenizers) even in dev/`tauri dev`
# builds. Without this, candle's matmul kernels run unoptimized and embedding is
# ~13x slower (9s vs ~0.3s). App code itself stays unoptimized for fast
# incremental rebuilds and debuggability — only deps pay the one-time opt cost.
[profile.dev.package."*"]
opt-level = 3

